Fix marker alignment

--- a/src/scss/_player.scss
+++ b/src/scss/_player.scss
@@ -100,6 +100,7 @@
   position: absolute;
   z-index: 1;
   top: 0;
+  margin-left: -1px;
   padding: 1px 4px;
   background-color: pink(300);
   border-radius: 0 2px 2px 0;
@@ -115,7 +116,7 @@
   &::before {
     content: '';
     position: absolute;;
-    left: -1px;
+    left: 0;
     top: 0;
     bottom: -10px;
     width: 1px;
